test/bad/double_declaration_06.mpp
data foo = #FOO;
fun foo():bool { return true; };
